sphinx_audeering_theme/static/css/audeering.css
/* ... */
.wy-table-responsive thead tr th.stub {
    /* Fix borders for row headers */
    border-right: solid 2px var(--grey);
}
/* Allow for line breaks in Tables.
 * See: https://stackoverflow.com/a/40650120 */
.wy-table-responsive table td {
    white-space: normal;
}
/* Fix vertical placement in tables */
.wy-table-responsive table td ol.arabic {
    margin-bottom: 12px;
    margin-top: 12px;
}
/* Fix margin in table cells */
.wy-table td p:last-child,
.rst-content table.docutils td p:last-child,
.rst-content table.field-list td p:last-child {
    margin-bottom: 0 !important;
}
/* Fix table headers margin */
.wy-table-responsive thead th p {
    margin-bottom: 0 !important;
}
/* Fix table row headers margin */
.wy-table-responsive tbody tr th p {
    margin-bottom: 0 !important;
}

/***** TABLE PREVIEW in AUDBCARDS ****************************************/
.rst-content table.docutils:not(.field-list) tr.clickable table.preview tr:nth-child(2n-1) td {
    /* Don't style odd and even rows differently in preview table */
    background-color: inherit;
}
.rst-content table.docutils:not(.field-list) tr.clickable table.preview td,
.rst-content table.docutils:not(.field-list) tr.clickable table.preview th {
    /* Reduce padding to vertically center cell content in preview table,
     * and reduce height of table cells */
    padding-bottom: 4px;
}
table.preview th p {
    /* Adjust font size of header in preview table to table content */
    font-size: 13px;
}
.rst-content table.docutils:not(.field-list) tr.clickable td.expanded-row-content {
    /* Remove double border on left side of cell holding preview table */
    border-left: none;
}
.rst-content table.docutils:not(.field-list) tr.clickable td table.preview td {
    /* Remove complete border in preview table cells */
    border-left: none;
    border-bottom: none;
}
table.clickable tr.clicked td:not(.expanded-row-content):not(:first-child) {
    /* Remove left border on clicked row when preview is shown,
     * without changing position of the text */
    border-left: 1px solid transparent;
}

/***** FIGURE AND TABLE CAPTIONS *****************************************/
.wy-table caption, .rst-content table.docutils caption,
.rst-content table.field-list caption, .rst-content div.figure p.caption {
    font-style: italic;
    font-size: 100%;
    font-weight: 100;
    font-family: "Lato","proxima-nova","Helvetica Neue",Arial,sans-serif;
    color: var(--black);
}

/***** JUPYTER SPHINX ****************************************************/
/* Adjust appearance of jupyter-sphinx code cells */
/* !important prevents jupyter-sphinx from overwriting them */
div.jupyter_container {
    -moz-box-shadow: none !important;
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
    border: none !important;
    border-radius: 0 !important;
    /* margin: 0; */
}
.jupyter_container div.code_cell {
    background: var(--light-grey) !important;
    border: 0px !important;
    border-radius: 0 !important;
}
.jupyter_container div.code_cell pre {
    padding: 12px !important;
}
.jupyter_cell div.cell_output output {
    padding: 0 !important;
}
.jupyter_cell div.cell_output div.output div.highlight {
    background-color: var(--white);
    border: 1px solid var(--light-grey);
}
.jupyter_container div.highlight-default {
    padding: 0 !important;
}
.jupyter_container div.output pre {
    padding: 12px !important;
}
.jupyter_container div.text_html {
    padding: 12px !important;
    padding-top: 6px !important;
}
.rst-content .jupyter_container div[class^='highlight'],
.document .jupyter_container div[class^='highlight'] {
    padding: 0 !important;
}
/* Some additional styling taken form the Jupyter notebook CSS */
div.text_html table {
  border: none !important;
  border-collapse: collapse !important;
  border-spacing: 0 !important;
  color: black !important;
  font-size: 12px !important;
  table-layout: fixed !important;
}
div.text_html thead {
  border-bottom: 1px solid black !important;
  vertical-align: bottom !important;
}
div.text_html tr,
div.text_html th,
div.text_html td {
  text-align: right !important;
  vertical-align: middle !important;
  padding: 0.5em 0.5em !important;
  line-height: normal !important;
  white-space: normal !important;
  max-width: none !important;
  border: none !important;
}
div.text_html th {
  font-weight: bold !important;
}
div.text_html tbody tr:nth-child(odd) {
  background: #f5f5f5 !important;
}
div.text_html tbody tr:hover {
  background: rgba(66, 165, 245, 0.2) !important;
}

/***** COPY-BUTTON *******************************************************/
/* Disable copy-button in nbsphinx */
.prompt a.copybtn {
    display: none !important;
}

/***** FOOTER ************************************************************/
footer ul {
  overflow: hidden;
  margin-bottom: 10px;
  padding-top: 2px;
}
footer li {
  margin-right: 20px;
  font-weight: 700;
  float: left;
}
footer p {
  margin-bottom: 10px;
}

